Fixed CSS file so that the wrapped images expand the container

--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ a:hover {
 }
 
 .bodyone {
-    height: 500px;
     /* background-color: white; */
     display: flex;
     justify-content: space-evenly;
@@ -88,7 +87,6 @@ button {
 
 .maincontainer {
     background-color: #f9faf8;
-    height: 500px;
     width: auto;
 }
 
